add patch and delete user profile and swagger docs
