# internal/features/users/transport/http/dto_common.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/M1sterZag/Dont_Play_Separately/internal/core/domain"
 	core_storage "github.com/M1sterZag/Dont_Play_Separately/internal/core/storage"
+	core_http_types "github.com/M1sterZag/Dont_Play_Separately/internal/core/transport/http/types"
 	"github.com/google/uuid"
 )
 
@@ -26,4 +27,18 @@ func userProfileDTOFromDomain(profile domain.UserProfile, storage core_storage.S
 		AvatarURL: storage.PublicURL(profile.AvatarKey),
 		CreatedAt: profile.CreatedAt,
 	}
+}
+
+type PatchProfileRequest struct {
+	Nickname  core_http_types.Nullable[string] `json:"nickname"`
+	Bio       core_http_types.Nullable[string] `json:"bio"`
+	AvatarKey core_http_types.Nullable[string] `json:"avatar_key"`
+}
+
+func userProfilePatchFromRequest(request PatchProfileRequest) domain.UserProfilePatch {
+	return domain.NewUserProfilePatch(
+		request.Nickname.ToDomain(),
+		request.Bio.ToDomain(),
+		request.AvatarKey.ToDomain(),
+	)
 }
